add local script

--- a/scripts/local.conf
+++ b/scripts/local.conf
@@ -47,4 +47,5 @@ VLAN_INTERFACE=eth1
 PUBLIC_INTERFACE=eth2
 
 MGT_BRIDGE_OR_NET_NAME="10.4.0.0"
+VM_BRIDGE_OR_NET_NAME="10.4.10.0"
 PUB_BRIDGE_OR_NET_NAME="172.31.80.0"
