--- a/ansible_cloud_project/final/create_clients.yml
+++ b/ansible_cloud_project/final/create_clients.yml
@@ -135,3 +135,27 @@
         line: "{{ gce.instance_data[0].private_ip }}"
         state: present
 
+
+    - name: Launch Client
+      gce:
+        instance_names: client6
+        zone: "{{ zone }}"
+        machine_type: "{{ machine_type }}"
+        image: "{{ image }}"
+        image_family: "{{ image }}"
+        service_account_email: "{{ service_account_email }}"
+        credentials_file: "{{ credentials_file }}"
+        project_id: "{{ project_id }}"
+        tags: clients
+        metadata: '{"startup-script" : "curl https://raw.githubusercontent.com/codycodes/SCC_NTI460/master/ansible_cloud_project/final/instance_config_scripts/nfs_ldap_client.sh > client.sh; chmod +x ./client.sh; ./client.sh  {{ ldap }} {{ nfs }}"}'
+      register: gce
+
+    - debug: msg=" Client IP = {{ gce.instance_data[0].private_ip }}"
+
+    - name: adding instance to the groups
+      lineinfile:
+        dest: /etc/ansible/hosts
+        insertafter: '^\[clients\]'
+        line: "{{ gce.instance_data[0].private_ip }}"
+        state: present
+
